add some style to globals.css & scrollbar custom plugin to tailwind.config.js

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,5 +2,25 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  :has(:target) {
+    scroll-behavior: smooth;
+    scroll-padding-top: 2rem;
+  }
+}
+
+@layer base {
+  button {
+    user-select: none;
+  }
+}
+
 @layer utilities {
+  .vertical-text {
+    writing-mode: vertical-lr;
+  }
 }
