add VTFRedzone-Classic variable

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,6 +20,9 @@ html {
 }
 
 @layer utilities {
+  .vtf-font {
+    font-family: var(--vtfredzone-classic-font);
+  }
   .vertical-text {
     writing-mode: vertical-lr;
   }
