--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,6 +25,18 @@ html {
 }
 
 @layer components {
+  main {
+    @apply min-h-svh;
+  }
+  main:not(.ignore) {
+    @apply mx-auto w-11/12 max-w-7xl py-20 sm:pt-28;
+  }
+  h2 {
+    @apply mb-6 text-xl lg:mb-8 lg:text-3xl;
+  }
+  h3 {
+    @apply mb-4 text-lg lg:mb-6 lg:text-xl;
+  }
   p {
     @apply mb-4;
   }
