add main tag as common tag for pages & refactor date format

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -28,7 +28,7 @@ html {
   main {
     @apply min-h-svh;
   }
-  main:not(.ignore) {
+  main:has(> section:not(.ignore)) {
     @apply mx-auto w-11/12 max-w-7xl py-20 sm:pt-28;
   }
   h2 {
